The codes to conduct drought metrics analysis

--- a/evaluation_class_modified.ipynb
+++ b/evaluation_class_modified.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define a class including all functions used\n",
+    "\n",
     "import geopandas\n",
     "from rasterio import features\n",
     "from affine import Affine\n",
@@ -5617,28 +5619,36 @@
     }
    ],
    "source": [
+    "# Conduct the analysis\n",
+    "\n",
     "#the GCMs files' directory\n",
-    "test_path = '/global/cscratch1/sd/zx2217/CMIP6/historical/interpolated_to_E3SM/'\n",
+    "#there are only 3 template files provided. We can use any outputs from CMIP5/6.\n",
+    "test_path = '/data/test/'\n",
     "#the variable name of precipitation in test data\n",
     "test_pr_name = 'pr'\n",
+    "# the file of observational data\n",
     "observe_path = \"CPC_monthly_precipitation_to_1_degree.nc\"\n",
     "#the variable name of precipitation in observed data\n",
     "observe_pr_name = 'precip'\n",
-    "# the path of weightfile used in interpolation, if data are already interpolated, set the interpolation=False in x.evaluate_multi_model()\n",
-    "weightfile_path = '/global/cscratch1/sd/zx2217/CMIP6/historical/interpolated_to_E3SM/interpolated_pr_Amon_E3SM-1-1_historical_r1i1p1f1_gr_187001-200912.nc'\n",
+    "# the path of weightfile used in interpolation, if data are already interpolated, set the interpolation=False in x.evaluate_multi_model()\\\n",
+    "# here I use a GCMs file with 1*1 degree resolution\n",
+    "weightfile_path = '/data/weightfile/interpolated_pr_Amon_E3SM-1-1_historical_r1i1p1f1_gr_187001-200912.nc'\n",
     "#the name of evaluation region in the shapefile\n",
     "hu_name = 'New England Region'\n",
     "#the path of shapefile\n",
     "shp_path = 'HU/WBDHU2.shp'\n",
     "\n",
+    "\n",
     "# Loop over all files under test_path and conduct data analysis\n",
     "x = evaluation()\n",
     "x.evaluate_multi_model(test_path,test_pr_name,observe_path,observe_pr_name,weightfile_path,hu_name,shp_path,interpolation=False)\n",
     "\n",
+    "\n",
     "#Conduct the PFA to get Principal Metrics within the region defined. The column names of pricipal metrics are saved at 'output_principal_metrics_column_defined'\n",
+    "# Once we get the name of pricipal metrics defined by PFA. It's no need to run this function again.\n",
     "#x.PFA()\n",
     "\n",
-    "\n",
+    "# Make sure get the name of pricipal metrics defined by PFA firstly. (Here I provide a template named 'output_principal_metrics_column_defined') \n",
     "#Select the principal metrics defined at 'output_principal_metrics_column_defined' and make plots \n",
     "x.PM_selection()\n",
     "x.result_analysis(x.principal_metrics)\n",
@@ -5665,9 +5675,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Mypackage",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mypackage"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5679,7 +5689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
